<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DodajSamochod" >

    <TextView
        android:id="@+id/marka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/markaTekst" />
    <EditText
        android:id="@+id/markaPole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/marka"
        android:layout_centerHorizontal="true"
        android:ems="10" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/markaPole"
        android:text="@string/modelTekst" />
    <EditText
        android:id="@+id/modelPole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/model"
        android:layout_below="@+id/markaPole"
        android:layout_centerHorizontal="true"
        android:ems="10" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/pojSilnika"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modelPole"
        android:text="@string/pojSilnikaTekst" />
    <EditText
        android:id="@+id/pojSilnikaPole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/pojSilnika"
        android:layout_below="@+id/modelPole"
        android:layout_centerHorizontal="true"
        android:ems="3"
        android:inputType="numberDecimal" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/moc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pojSilnikaPole"
        android:text="@string/mocTekst" />
    <EditText
        android:id="@+id/mocPole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/moc"
        android:layout_below="@+id/pojSilnikaPole"
        android:layout_centerHorizontal="true"
        android:ems="3"
        android:inputType="number" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/nadwozie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mocPole"
        android:text="@string/nadwozieTekst" />    
    <Spinner
        android:id="@+id/nadwozieLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/nadwozie"
        android:layout_below="@+id/mocPole"
        android:entries="@array/nadwozia" />
    
    <Button
        android:id="@+id/dodaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nadwozieLista"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/dodajSamochod" /> 
    <Button
        android:id="@+id/wyjdz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dodaj"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/powrotDoMenu" />

</RelativeLayout>