<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    android:paddingBottom="@dimen/activity_vertical_margin"    
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tytul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="#FFF"
        android:text="@string/tytul" />

    <Button
        android:id="@+id/wejscie"
        android:minHeight="64dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tytul"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#695b8e"
        android:textSize="16sp"
        android:textColor="#FFF"
        android:text="@string/wejscie" />

    <Button
        android:id="@+id/wyjdz"
        android:minHeight="64dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wejscie"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="#695b8e"
        android:textSize="16sp"
        android:textColor="#FFF"
        android:text="@string/wyjdz" />

</RelativeLayout>